<resources>
    <string name="app_name">FetchPost</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Username">Username</string>
    <string name="Pass">Password</string>
    <string name="login">Login</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="re_enter_pass">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="not_registered">New Member?</string>
    <string name="already_member">Already a member? Login.</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="login_google">Login with google</string>
    <string name="back_arrow">back arrow</string>
    <string name="sign_google">Sign-in with google</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full name</string>
    <string name="remember_login">Remember Login</string>
    <string name="preference_key">com.example.fetchpost.PREFERENCE_KEY</string>
    <string name="login_state">loginState</string>

</resources>
